[tool.cibuildwheel]
test-command = [
    "python {package}/sanity-check.py",
    "python -m pip install -U pip",
    "pip install -r {package}/test-requirements.txt",
    "{package}/build_judy.sh",
    "(cd {package}/tests && ./compile.sh)",
    "(cd {package}/tests && ./a.out --unit-test)",
    "(cd {package} && PYTHONPATH=$(pwd) python -m twisted.trial tests.python_api)",
]

# temporarily dropping pypy until we can figure out the string unit-test failure
build = [ "cp38-*", "cp39-*", "cp310-*", "cp311-*" , "cp312-*" , "cp313-*"]
# build = [ "pp*" ]
archs = [ "auto64"]
build-verbosity = 1

[tool.setuptools.packages]
find = {namespaces = false, exclude = [ "pointless.tests" ]}

[tool.cibuildwheel.linux]
environment = "CC=gcc"

[tool.cibuildwheel.macos]
environment = "CC=clang"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
environment = "CC=gcc"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pointless"
version = "1.0.20"
description = "A read-only relocatable data structure for JSON like data, with C and Python APIs"
authors = [{ name = "Arni Mar Jonsson", email = "arnimarj@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Operating System :: POSIX",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
"Source Code" = "https://github.com/arnimarj/py-pointless"
