[tool.cibuildwheel]
test-command = [
    "python {package}/sanity-check.py",
    "python -m pip install -U pip",
    "pip install -r {package}/test-requirements.txt",
    "{package}/build_judy.sh",
    "(cd {package}/tests && ./compile.sh)",
    "(cd {package}/tests && ./a.out --unit-test)",
    "(cd {package} && PYTHONPATH=$(pwd) python -m twisted.trial tests.python_api)",
]

# temporarily dropping pypy until we can figure out the string unit-test failure
build = [ "cp39-*", "cp310-*", "cp311-*" , "cp312-*" , "cp313-*"]
build-verbosity = 1

[tool.setuptools.packages]
find = {namespaces = false, exclude = [ "pointless.tests" ]}

[tool.cibuildwheel.linux]
archs = ["auto64"]
environment = "CC=gcc"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
environment = "CC=clang"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
environment = "CC=gcc"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pointless"
version = "1.0.25"
description = "A read-only relocatable data structure for JSON like data, with C and Python APIs"
authors = [{ name = "Arni Mar Jonsson", email = "arnimarj@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Operating System :: POSIX",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
"Source Code" = "https://github.com/arnimarj/py-pointless"

[tool.setuptools]
ext-modules = [
    {"name" = "pointless", "include-dirs" = [
        "./include"
    ], "sources" = [
        # Python stuff
        "pointless_ext.c",

        # py-pointless
        "python/pointless_create.c",
        "python/pointless_vector.c",
        "python/pointless_bitvector.c",
        "python/pointless_set.c",
        "python/pointless_map.c",
        "python/pointless_object.c",
        "python/pointless_instance_dispatch.c",
        "python/pointless_pyobject_hash.c",
        "python/pointless_pyobject_cmp.c",
        "python/pointless_print.c",
        "python/pointless_prim_vector.c",

        # libpointless
        "src/custom_sort.c",
        "src/bitutils.c",
        "src/pointless_reader.c",
        "src/pointless_reader_helpers.c",
        "src/pointless_create.c",
        "src/pointless_create_cache.c",
        "src/pointless_dynarray.c",
        "src/pointless_value.c",
        "src/pointless_unicode_utils.c",
        "src/pointless_hash.c",
        "src/pointless_cmp.c",
        "src/pointless_hash_table.c",
        "src/pointless_bitvector.c",
        "src/pointless_walk.c",
        "src/pointless_cycle_marker.c",
        "src/pointless_cycle_marker_wrappers.c",
        "src/pointless_validate.c",
        "src/pointless_validate_heap_ref.c",
        "src/pointless_validate_heap.c",
        "src/pointless_validate_hash_table.c",
        "src/pointless_malloc.c",
        "src/pointless_int_ops.c",
        "src/pointless_recreate.c",
        "src/pointless_eval.c",
    ], "extra-compile-args" = [
        "-I./include",
        "-I./judy-1.0.5/src",
        "-Wall",
        "-Wno-strict-prototypes",
        "-g",
        "-D_GNU_SOURCE",
        "-O2",
        "-DNDEBUG",
        "-std=c99",
    ], "extra-link-args" = [
        "-L./judy-1.0.5/src",
        "-Bstatic",
        "-lJudy",
        "-Bdynamic",
        "-lm",
    ]}
]
